vcluster/cert-manager-integration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cert.146.190.198.189.nip.io
    secretName: example-cert-tls
  rules:
  - host: cert.146.190.198.189.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
